# KeyOverlay

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
overlay/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: KeyPreview.tsx  OverlayUrlCard.tsx  SettingsPanel.tsx  StatusBar.tsx
src/hooks/: useSettings.ts
src/i18n/: LangContext.tsx  translations.ts
src/styles/: app.css  global.css  key-preview.css  overlay-card.css  settings-panel.css  status-bar.css
src/types/: settings.ts
