[package]
name = "key-overlay"
version = "0.1.0"
description = "KeyOverlay - keyboard overlay for streamers"
authors = []
edition = "2021"

[lib]
name = "key_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket server
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.26"
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["sink"] }

# HTTP server for overlay page
tiny_http = "0.12"

# Windows low-level hooks (only linked on Windows)
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
